force-app/main/default/objects/Health_Quiz_Step__c/Health_Quiz_Step__c.object-meta.xml
<CustomObject>
    <label>Health Quiz Step</label>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health Quiz Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>