force-app/main/default/objects/Health_Quiz_Step__c/fields/Icon_Key__c.field-meta.xml
<CustomField>
    <fullName>Icon_Key__c</fullName>
    <label>Icon Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>