force-app/main/default/objects/Health_Quiz_Step__c/fields/Option_Key__c.field-meta.xml
<CustomField>
    <fullName>Option_Key__c</fullName>
    <label>Option Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>