force-app/main/default/objects/Health_Quiz_Step__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Session</label>
    <referenceTo>Health_Quiz_Session__c</referenceTo>
    <relationshipLabel>Quiz Steps</relationshipLabel>
    <relationshipName>Quiz_Steps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>