force-app/main/default/objects/Health_Quiz_Step__c/fields/Step_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Step_Unique_Key__c</fullName>
    <externalId>true</externalId>
    <label>Step Unique Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>